# Nexus AI Filesystem
[project]
name = "nexus-ai-fs"
version = "0.9.43"
description = "Nexus = filesystem/context plane."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nexus Team", email = "team@nexus.example.com"}
]
maintainers = [
    {name = "Nexus Team", email = "team@nexus.example.com"}
]
keywords = [
    "filesystem",
    "context",
    "ai",
    "agents",
    "storage",
    "distributed",
    "llm",
    "vector-search",
    "content-addressable"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # CLI (needed for basic CLI stub)
    "click>=8.1.7",
    "rich>=13.7.0",
    "tqdm>=4.66.0", # Progress bars for sync operations
    # Configuration
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    # HTTP client (for remote mode)
    "httpx[http2]>=0.28.1",
    "requests>=2.31.0",
    "tenacity>=8.2.0", # Retry logic with exponential backoff
    # Python 3.14 compatibility - pin transitive deps with wheels
    "aiohttp>=3.11.0",
    "frozenlist>=1.5.0",
    "protobuf>=6.31.1",
    "grpcio>=1.78.0",
    # HTTP server (FastAPI + ASGI)
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0", # ASGI server (base profile; use [server-standard] for full stack)
    # Required by FastAPI's Form(...) — token-exchange (#3818) parses
    # application/x-www-form-urlencoded per RFC 6749 §3.2 / RFC 8693 §2.1.
    # FastAPI raises at route registration time without this; declared
    # directly so we don't depend on `mcp` (current transitive owner).
    "python-multipart>=0.0.20",
    # File watching (cross-platform, Rust-backed via notify crate)
    "watchdog>=4.0.0",  # fsnotify wrapper for daemon source watchers (#3804)
    "keyring>=25.0.0",  # OS keychain/secret service for daemon JWT cache (#3804)
    # Database
    "sqlalchemy>=2.0.49",
    "alembic>=1.13.0",
    "greenlet>=3.0.0", # Required for SQLAlchemy async (run_sync in async context)
    "psycopg2-binary>=2.9.10", # PostgreSQL driver (sync)
    "asyncpg>=0.31.0", # PostgreSQL driver (async)
    "aiosqlite>=0.20.0", # SQLite driver (async)
    # Caching
    "cachetools>=6.2.2",
    "cachebox>=4.0.0", # Rust-backed TTLCache via PyO3 (Issue #3192)
    "fastbloom-rs>=0.5.0", # Rust Bloom filter for Tiger cache pre-gate (Issue #3192)
    "redis>=7.0.0", # Redis/Dragonfly client (async support)
    "nats-py>=2.9.0", # NATS JetStream event bus (Issue #1331)
    # Authentication
    "authlib>=1.6.5", # JWT and OAuth support for OIDC auth
    "bcrypt>=4.0.0", # Password hashing for local auth
    "cryptography>=41.0.0", # OAuth token encryption (Fernet) + Ed25519 identity signing
    "PyJWT>=2.8.0", # JWT-VC issuance/verification for agent identity (Issue #1355)
    "pyotp>=2.9.0", # RFC 6238 TOTP for server-side password-vault totp codes
    "itsdangerous>=2.2.0", # Signed, TTL-bounded OAuth state tokens (URLSafeTimedSerializer)
    "tiktoken>=0.12", # Token counting for chunking
    "markdown-it-py>=3.0.0", # CommonMark-compliant markdown AST parser (Issue #3718)
    "mdit-py-plugins>=0.4.0", # markdown-it-py plugins: front_matter (Issue #3718)
    # MCP Server (v0.7.0)
    "fastmcp>=2.0.0", # Model Context Protocol server
    # Default local PDF parser (Rust + PyO3, ~2-3 MB, zero Python deps).
    # On Python 3.14 without a cp314 wheel, pip builds from sdist and needs
    # Rust plus ``PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1`` (both present in
    # the Nexus Docker image and typical dev setups).
    "pdf-inspector>=0.1.1",
    # Fast JSON serialization (2-3x faster than stdlib json)
    "orjson>=3.10.0",
    # Roaring Bitmaps for Tiger Cache (Issue #682)
    "pyroaring>=1.0.0",
    "blake3>=1.0.0",
    # Binary delta sync for rsync-style incremental updates (Issue #869)
    "bsdiff4>=1.2.0",
    # Content-Defined Chunking for large file deduplication (Issue #1074)
    "fastcdc>=1.5.0",
    # BM25S for 500x faster ranked text search (Issue #796)
    "bm25s>=0.2.0",
    # Rapidfuzz for fast fuzzy string matching in edit engine (Issue #800)
    # 10-100x faster than difflib (Rust-backed)
    "rapidfuzz>=3.0.0",
    # LZ4 compression for ContentCache 3-4x capacity (Issue #908)
    "lz4>=4.3.0",
    # Rate limiting for DoS protection (Issue #780)
    "slowapi>=0.1.9",
    "limits>=3.6.0",
    # Prometheus metrics endpoint (Issue #761)
    "prometheus_client>=0.20.0",
    # OpenTelemetry observability (Issue #764)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.41b0",
    "aiofiles>=25.1.0",
    # Structured logging with JSON output and context propagation (Issue #1002)
    "structlog>=24.4.0",
]

[project.optional-dependencies]
performance = [
    # BLAKE3 hashing fallback when Rust extension unavailable (Issue #582)
    # Local embeddings without API (fast ONNX inference)
    "fastembed>=0.4.0",
    # Rust-backed markdown parser — 10x faster structure indexing (Issue #3718)
    # Optional: falls back to markdown-it-py (pure Python) when unavailable.
    "markdown-it-pyrs>=0.3.0",
]

pay = [
    # TigerBeetle client for Nexus Pay credits ledger (Issue #3250)
    "tigerbeetle>=0.16.4",
]

monitoring = [
    # System resource monitoring for agent eviction (Issue #2170)
    "psutil>=5.9",
]

mobile = [
    # GGUF model support via llama.cpp (Issue #1214)
    # For local embedding inference on mobile/edge devices
    "llama-cpp-python>=0.2.0",
]

sandbox-monty = [
    # Pydantic Monty — lightweight in-process Python sandbox (Issue #1316)
    "pydantic-monty>=0.0.4",
]

sandbox = [
    # Issue #3778: SANDBOX profile — agent sandbox runtime (zero external services)
    # pdf-inspector comes from core deps (see top of file) when Python 3.12
    "bm25s>=0.2",
    "cachetools>=5.0",
    "tokenizers>=0.15",
    # Local vector storage (sqlite-vec = SQLite extension, ~3 MB wheel).
    # Loaded into the same nexus.db file via conn.enable_load_extension().
    "sqlite-vec>=0.1",
    # Remote embeddings via any provider (OpenAI / Cohere / Azure / etc.).
    # BYO API key — picked up from the standard env vars by litellm.
    "litellm>=1.74.0",
]

sentry = [
    # Sentry error tracking and performance monitoring (Issue #759)
    "sentry-sdk[fastapi]>=2.0.0",
]

profiling = [
    # Pyroscope continuous profiling (Issue #763)
    "pyroscope-io>=0.8.16",
    "pyroscope-otel",
]

vault = [
    # HashiCorp Vault client for VaultTransitProvider envelope encryption (Issue #3803)
    "hvac>=1.2.0",
]

aws = [
    # AWS SDK for AwsKmsProvider envelope encryption (Issue #3803)
    "boto3>=1.42.4",
]

server-standard = [
    # Opt-in production ASGI stack: uvloop, httptools, websockets, watchfiles, etc.
    "uvicorn[standard]>=0.38.0",
]

s3 = [
    # AWS S3 connector runtime (PathS3/CASS3 + auth tooling)
    "boto3>=1.42.4",
]

gcs = [
    # Google Cloud Storage connector runtime
    "google-cloud-storage>=3.6.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
]

gdrive = [
    # Google Drive/Gmail/Calendar connector runtime
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.0",
]

gws = [
    # Google Workspace connector runtime alias (Drive/Gmail/Calendar)
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.0",
]

slack = [
    # Slack connector runtime
    "slack-sdk>=3.39.0",
]

cloud = [
    # Aggregate cloud connector runtime stack
    "boto3>=1.42.4",
    "google-cloud-storage>=3.6.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.0",
    "slack-sdk>=3.39.0",
]

governance = [
    # Governance/ML stack (EigenTrust, graph/ring analysis, clustering helpers)
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2",
    "scipy>=1.11.0",
]
dev = [
    # Testing
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.8.0",  # Parallel test execution
    "pytest-timeout>=2.3.0",  # Per-test timeout enforcement
    "freezegun>=1.4.0",  # Time mocking for tests
    "hypothesis>=6.0.0",  # Property-based testing for crypto/identity (Issue #1355)
    "syrupy>=4.6.0",  # Snapshot testing for doctor output (Issue #3741)
    "respx>=0.22.0",  # httpx mocking for daemon JWT client tests (#3804)

    # Code Quality
    "ruff>=0.14.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "import-linter>=2.0",  # Architecture boundary enforcement (Issue #2286)
    "maturin-import-hook>=0.2.0",  # Auto-rebuild Rust extensions on source change (Issue #3712)

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",

    # Type stubs
    "types-pyyaml>=6.0.12",
    "types-cachetools>=5.3.0",
    "types-requests>=2.31.0",
]

test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-alembic>=0.11.0",  # Alembic migration test harness (#1296)
    "freezegun>=1.4.0",  # Time mocking for tests
    "hypothesis>=6.0.0",  # Property-based testing (kernel invariant tests)
    "pydantic-monty>=0.0.4",  # Monty sandbox integration/e2e tests (#1317)
]

fuse = [
    # FUSE filesystem support
    "fusepy>=3.0.1",  # Python FUSE bindings
]

postgres = [
    # PostgreSQL support
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter
]

cloud-sql = [
    "cloud-sql-python-connector[asyncpg]>=1.14.0",
]

semantic-search = [
    # txtai unified search: hybrid BM25+dense, semantic graph (Issue #2663)
    # NOTE: txtai depends on faiss-cpu and large ML wheels; keep this opt-in.
    # torch still has no supported macOS x86_64 path for this stack.
    "txtai[database,graph]>=9.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "faiss-cpu>=1.11.0; platform_machine=='x86_64' or platform_machine=='aarch64' or platform_machine=='arm64'",
    # Keyword search support - uses existing SQLite/PostgreSQL FTS
    # BM25S is now in core dependencies (Issue #796)
    # Vector database extensions for semantic/hybrid search:
    "sqlite-vec>=0.1.0",  # SQLite vector search (pip installable)
    "pgvector>=0.3.0",    # PostgreSQL vector search (Python client - requires pgvector extension in database)
]

semantic-search-remote = [
    # Remote embedding providers (lightweight, requires API keys)
    # Recommended: OpenAI embeddings (default for semantic search)
    "litellm>=1.74.0",
    "openai>=1.0.0",
]

e2b = [
    # E2B cloud sandbox support (stateful Python execution via Jupyter kernel)
    "e2b-code-interpreter>=1.0.0",
]

docker = [
    # Docker sandbox provider (local containerized execution)
    "docker>=7.0.0",
]

# First-party plugins (install manually for now - not yet published to PyPI)
# anthropic = [
#     "nexus-plugin-anthropic>=0.1.0",
# ]
#
# skill-seekers = [
#     "nexus-plugin-skill-seekers>=0.1.0",
# ]
#
# plugins = [
#     "nexus-plugin-anthropic>=0.1.0",
#     "nexus-plugin-skill-seekers>=0.1.0",
# ]

# Event stream export (Issue #1138)
kafka = ["aiokafka>=0.11.0"]
nats-export = ["nats-py>=2.9.0"]
pubsub = ["gcloud-aio-pubsub>=6.0.0"]
sse = ["sse-starlette>=2.2.0"]
event-streaming = [
    "aiokafka>=0.11.0",
    "nats-py>=2.9.0",
    "gcloud-aio-pubsub>=6.0.0",
    "sse-starlette>=2.2.0",
]

all = [
    # All optional features (plugins must be installed manually)
    # Default embedding provider: OpenAI (lightweight, requires API key)
    # Excludes: sentence-transformers (too heavy ~2GB), voyageai (specialized use case)
    # Note: fusepy removed - Rust nexus-fuse binary is bundled in the package
    # Note: bm25s is now in core dependencies (Issue #796)
    "txtai[database,graph]>=9.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "faiss-cpu>=1.11.0; platform_machine=='x86_64' or platform_machine=='aarch64' or platform_machine=='arm64'",
    "psycopg2-binary>=2.9.9",
    "sqlite-vec>=0.1.0",
    "pgvector>=0.3.0",
    "litellm>=1.74.0",
    "openai>=1.0.0",
    "e2b-code-interpreter>=1.0.0",
    "uvicorn[standard]>=0.38.0",
    "boto3>=1.42.4",
    "google-cloud-storage>=3.6.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.0",
    "slack-sdk>=3.39.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2",
    "scipy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/nexi-lab/nexus"
Documentation = "https://nexi-lab.github.io/nexus/"
Repository = "https://github.com/nexi-lab/nexus"
Issues = "https://github.com/nexi-lab/nexus/issues"

[project.scripts]
nexus = "nexus.cli:main"
nexusd = "nexus.daemon:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nexus.cli" = ["data/*.yml", "data/*.Dockerfile", "data/*.sql"]
"nexus.backends.connectors.gws" = ["configs/*.yaml"]
"nexus.backends.connectors.github" = ["*.yaml"]
"nexus.bricks.auth.daemon.templates" = ["*.plist.j2", "*.service.j2"]

[tool.pytest.ini_options]
minversion = "7.0"
# No per-test timeout: CI runners have variable load; timeouts cause flaky failures
# and mask real issues (slow tests should be profiled and optimized, not killed).
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-n", "auto",                 # Parallel execution (auto-detect CPU cores)
    "--dist", "loadgroup",        # Group tests by xdist_group marker for serial execution
    "--ignore=tests/evaluation",  # Exclude LLM evaluation tests from default runs
    "--ignore=tests/benchmarks",  # Exclude benchmarks from default runs (run via benchmark.yml)
]
# Coverage disabled by default for faster local runs. Enable in CI:
#   pytest --cov=nexus --cov-report=term-missing --cov-report=html --cov-report=xml
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
log_cli = false
log_cli_level = "WARNING"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:Importing .* from nexus\\.services\\..* is deprecated:DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks tests as benchmarks",
    "evaluation: marks tests as LLM evaluation tests (requires ANTHROPIC_API_KEY)",
    "quarantine: Tests that are flaky or timing-dependent (deselected by default in CI)",
    "postgres: marks tests that require a running PostgreSQL instance (Issue #1299)",
    "benchmark_ci: critical benchmarks run on every PR",
    "vault: marks tests that require a running Vault dev server (opt-in, see docs/guides/auth-envelope-encryption.md)",
    "kms: marks tests that require a reachable AWS KMS endpoint (opt-in, real AWS or LocalStack)",
    "sandbox_memory: SANDBOX memory benchmark (skipped by default; run with -m sandbox_memory)",
]

[tool.coverage.run]
source = ["src/nexus"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/cli.py",  # Old location (kept for backward compatibility)
    "src/nexus/cli/*",  # CLI is tested via integration tests in examples/test_cli_commands.sh
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.mypy]
# Type checking configuration - Phase 3 will enable full strict mode
python_version = "3.14"
mypy_path = "stubs"
exclude = [
    "_pb2(_grpc)?\\.py$",  # Generated gRPC/protobuf stubs
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true  # Phase 3: Will fix all 531 type: ignore comments
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true  # Phase 3: Will remove and add proper stubs
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Phase 3 goals (currently have 531 type: ignore comments to eliminate):
# - disallow_any_generics = true
# - disallow_any_unimported = true
# - disallow_subclassing_any = true
# - strict = true

[[tool.mypy.overrides]]
module = [
    "click.*",
    "rich.*",
    "alembic.*",
    "google.cloud.*",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nexus.storage._metadata_mapper_generated"
# Proto-generated metadata_pb2 resolves to Any without a generated stub
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "nexus.backends.gcs"
# Legacy backend - return-type / override mismatches
disable_error_code = ["attr-defined", "override", "return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.gcs_connector"
# Return-type mismatch in connector methods
disable_error_code = ["attr-defined", "return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.transports.gcs_transport"
# google-cloud-storage stubs return Any; attr-defined from google.cloud.storage
disable_error_code = ["attr-defined", "no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.backends.transports.s3_transport"
# boto3 stubs return Any for all S3 client methods
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.backends.cas_backend"
# json.loads returns Any
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.tools.langgraph.nexus_tools"
# RemoteServiceProxy dispatches via __getattr__, returning Any
warn_return_any = false
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.bricks.*.tests.*"
# Brick-internal test files (moved from tests/ to src/nexus/bricks/*/tests/).
# Relax strict typing for test code — fixture parameters are injected by pytest
# and don't need type annotations.
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "nexus.backends.delegating"
# DelegatingBackend delegates all Backend methods to _inner via explicit forwarding.
# mypy resolves _inner.method() return types as Any when Backend is imported under
# TYPE_CHECKING (Issue #1449 recursive wrapping).
warn_return_any = false

[[tool.mypy.overrides]]
module = "nexus.backends.s3_connector"
# Return-type mismatch in connector methods
disable_error_code = ["attr-defined", "return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.local"
# Return-type mismatch in backend methods
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.hn_connector"
# Return-type mismatch in connector methods
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.gdrive_connector"
# Return-type mismatch in connector methods
disable_error_code = ["return-value"]


[[tool.mypy.overrides]]
module = "nexus.bricks.watch.file_watcher"
# watchfiles returns Change enum values that mypy resolves as int
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.backends.gmail_connector"
# Legacy backend - return-type / override mismatches
disable_error_code = ["override", "return-value", "no-any-return", "import-untyped", "unused-ignore"]

[[tool.mypy.overrides]]
module = "nexus.backends.x_connector"
# Legacy backend - return-type / override mismatches
disable_error_code = ["override", "return-value"]

[[tool.mypy.overrides]]
module = "nexus.backends.slack_connector"
# Backend - return-type / override mismatches
disable_error_code = ["override", "return-value", "arg-type", "no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.backends.slack_connector_utils"
# Slack API utilities
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "nexus.bricks.rebac.share_mixin",
]
# Mixin classes access `self.*` attributes defined on the concrete class
# (ReBACService). Mypy cannot see across mixin boundaries.
disable_error_code = ["attr-defined", "no-any-return"]

[[tool.mypy.overrides]]
module = [
    "test_slack_connector",
    "load_secrets_from_gcp",
]
# Script files - relaxed type checking
disallow_untyped_defs = false
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "*.examples.*",
    "examples.*",
]
# Relax strictness for example files
disallow_untyped_defs = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "nexus.storage.cache"
# cachetools library has complex generic types
disable_error_code = ["no-any-return", "misc", "call-overload", "import-untyped"]

[[tool.mypy.overrides]]
module = "nexus.backends.storage.cas_local"
# cachetools stubs may not be installed in all environments
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "nexus.bricks.search.embeddings"
# Provider wrapper class has complex inheritance, openai stubs mismatch
disable_error_code = ["override", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "nexus.bricks.workflows.loader",
    "nexus.bricks.mcp.provider_registry",
    "nexus.bricks.mcp.middleware",
    "nexus.bricks.mcp.oauth_mappings",
    "nexus.bricks.mcp.profiles",
    "nexus.fuse.operations",
    "nexus.fuse.ops._shared",
    "nexus.bricks.workflows.storage",
    "nexus.bricks.workflows.engine",
]
# yaml/requests/cachetools stubs handled at project level
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["nexus.bricks.mcp.server", "nexus.bricks.mcp.mount"]
# cachetools/yaml stubs may or may not be installed; suppress both directions
disable_error_code = ["import-untyped", "no-any-return", "redundant-cast"]

[[tool.mypy.overrides]]
module = [
    "nexus.migrations.migrate_identity_memory_v04",
]
# EntityRegistry accepts SimpleNamespace duck-type for session_factory
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "nexus.bricks.workflows.api"
# engine.workflows is LRUCache[str, Any] — dict-like .get() returns Any
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "nexus.server.auth.oidc",
    "nexus.bricks.auth.providers.oidc",
    "nexus.bricks.auth.classifiers.google",
]
# requests stubs
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "nexus.fuse.cache",
    "nexus.core.rebac_iterator_cache",
    "nexus.core.rebac_cache",
    "nexus.core.permission_boundary_cache",

    "nexus.bricks.identity.key_service",
    "nexus.core.reputation_service",
    "nexus.bricks.rebac.cache.iterator",
    "nexus.bricks.rebac.cache.result_cache",
    "nexus.bricks.rebac.cache.boundary",
    "nexus.bricks.rebac.cache.leopard",
    "nexus.bricks.rebac.cache.enforcer_cache",
    "nexus.bricks.rebac.permission_cache",
    "nexus.bricks.rebac.zone_graph_loader",
    "nexus.bricks.rebac.namespace_manager",
    "nexus.bricks.rebac.manager",
    "nexus.services.event_subsystem.bus.redis",
    "nexus.services.scheduler.policies.fair_share",
    "nexus.services.scheduler.policies.rate_limiter",
]
# cachetools returns Any from generic cache
disable_error_code = ["import-untyped", "no-any-return"]

[[tool.mypy.overrides]]
module = "nexus.bricks.parsers.validation.config"
# PyYAML lazy import
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "nexus.config"
# pydantic v2 API, yaml stubs
disable_error_code = ["import-untyped", "attr-defined", "typeddict-item"]

[[tool.mypy.overrides]]
module = [
    "nexus.server.subscriptions.models",
    "nexus.server.subscriptions.manager",
]
# pydantic v2 API
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["nexus.core._metadata_generated", "nexus.core._compact_generated"]
# CompactFileMetadata.to_file_metadata() returns Any
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = [
    "nexus.core.metadata_pb2",
    "nexus.grpc.vfs.vfs_pb2",
    "nexus.grpc.vfs.vfs_pb2_grpc",
    "nexus.grpc.vfs",
]
# Generated gRPC/protobuf stubs — no type info available
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nexus.server.rpc.grpc_servicer", "nexus.remote.rpc_transport"]
# VFS gRPC servicer and transport interact with generated vfs_pb2 module
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "nexus.storage.raft_metadata_store"
# PyO3 FFI wrapper - Rust methods not visible to mypy, complex Optional handling
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "nexus",
    "nexus.cli.commands.search",
    "nexus.core.nexus_fs",
    "nexus.core.nexus_fs_content",
    "nexus.core.nexus_fs_internal",
    "nexus.core.nexus_fs_metadata",
    "nexus.core.nexus_fs_search",
    "nexus.bricks.versioning.version_service",
    "nexus.bricks.search.search_service",
    "nexus.services.gateway",
    "nexus.server.fastapi_server",
    "nexus.storage.database",
    "nexus.factory.orchestrator",
]
# Raft module uses follow_imports=skip (PyO3), so callers get Any - suppress no-any-return
disable_error_code = ["attr-defined", "union-attr", "no-any-return", "misc", "import-untyped", "arg-type"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "nexus.bricks.search.semantic"
# Inherits same suppressions as raft-callers group + misc for "None" not callable
disable_error_code = ["attr-defined", "union-attr", "no-any-return", "misc"]
warn_unused_ignores = false

# --- Backend / driver return-type mismatches ---
[[tool.mypy.overrides]]
module = [
    "nexus.ipc.driver",
]
disable_error_code = ["return-value", "override"]

# --- Cache/dragonfly: unused type-ignore + no-any-return ---
[[tool.mypy.overrides]]
module = "nexus.cache.dragonfly"
warn_unused_ignores = false
disable_error_code = ["no-any-return"]

# --- Service modules with arg-type / return-value / misc issues ---
[[tool.mypy.overrides]]
module = [
    "nexus.bricks.mount.mount_manager",
    "nexus.bricks.mount.mount_service",
    "nexus.services.event_subsystem.log.exporters.factory",
    "nexus.bricks.portability.import_service",
    "nexus.server.lifespan.realtime",
]
# MetastoreABC arg-type / return-value mismatches from API evolution
disable_error_code = ["arg-type", "return-value", "attr-defined", "union-attr", "no-any-return", "assignment"]
warn_unused_ignores = false

# --- Misc single-file overrides ---
[[tool.mypy.overrides]]
module = "nexus.core.metadata"
disable_error_code = ["arg-type", "return-value"]


[[tool.mypy.overrides]]
module = "nexus.services.agents.agent_rpc_service"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "nexus.cli.commands.init_cmd",
    "nexus.cli.commands.stack",
    "nexus.cli.commands.status",
    "nexus.cli.commands.demo",
]
# PyYAML stubs — same as other CLI modules (config.py, config_resolver.py)
disable_error_code = ["import-untyped", "no-any-return"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "benchmarks/",
    "src/nexus/core/_metadata_generated.py",  # Generated at install time
    "src/nexus/core/_compact_generated.py",    # Generated at install time
    "src/nexus/core/protocols/",               # Generated at install time
    "src/nexus/grpc/vfs/vfs_pb2.py",           # Generated gRPC stub
    "src/nexus/grpc/vfs/vfs_pb2_grpc.py",      # Generated gRPC stub
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "G",   # flake8-logging-format (Issue #1002: prevent f-string in log calls)
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP037",  # quoted-annotation — needed for TYPE_CHECKING imports & forward refs (#1526)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S101", "B905", "SIM105", "G"]  # Tests: allow unused args, assert, zip, suppress, log format
"src/nexus/**/*.py" = ["G003", "G004", "G201"]  # Issue #1002: existing string concat + f-string + exc_info log calls — migrate gradually
"scripts/**/*.py" = ["G"]  # Scripts: allow all log format variants
"dockerfiles/**/*.py" = ["G"]  # Dockerfiles: allow all log format variants
"tests/e2e/self_contained/test_raft_metadata_store.py" = ["ARG", "S101", "B905", "F841"]  # zip strict, unused vars
"tests/e2e/self_contained/mcp/test_mcp_server_integration.py" = ["ARG", "S101", "B904"]  # raise from
"alembic/*" = ["UP007", "E402"]  # Alembic: Union syntax, import order
"src/nexus/backends/*.py" = ["ARG002"]  # Keep unused context params for API compatibility
"src/nexus/cache/postgres.py" = ["ARG002"]  # No-op stub implements PermissionCacheProtocol interface
"src/nexus/bricks/rebac/manager.py" = ["ARG002"]  # No-op cache stubs keep interface for callers
"src/nexus/bricks/ipc/driver.py" = ["ARG002"]  # Backend ABC override — params required by interface
"src/nexus/ipc/driver.py" = ["ARG002"]  # Backend ABC override — context params required by interface
"src/nexus/core/nexus_fs.py" = ["ARG002"]  # Constructor accepts cache params for public API
"src/nexus/raft/__init__.py" = ["E402"]  # Conditional imports require try/except after TYPE_CHECKING
"src/nexus/server/rpc/handlers/filesystem.py" = ["ARG001"]  # Handler signature requires context param
"src/nexus/storage/raft_metadata_store.py" = ["ARG002", "SIM105", "SIM108", "SIM102"]  # Interface + datetime parsing + style
"scripts/*.py" = ["ARG001"]  # Utility scripts

[tool.ruff.lint.isort]
known-first-party = ["nexus"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Import Linter — Architecture boundary enforcement (Issue #2286)
# Reference: docs/design/NEXUS-LEGO-ARCHITECTURE.md §1.2, §3.3
# =============================================================================

[tool.importlinter]
root_packages = ["nexus"]
# TYPE_CHECKING imports are violations too (strict mode)
include_external_packages = false

# Contract 1: Bricks are independent — zero cross-brick imports
[[tool.importlinter.contracts]]
id = "brick-independence"
name = "Bricks must not import from each other (LEGO Principle 3)"
type = "independence"
modules = [
    "nexus.bricks.access_manifest",
    "nexus.bricks.auth",
    "nexus.bricks.context_manifest",
    "nexus.bricks.delegation",
    "nexus.bricks.discovery",
    "nexus.bricks.governance",
    "nexus.bricks.identity",
    "nexus.bricks.ipc",
    "nexus.bricks.mcp",
    "nexus.bricks.mount",
    "nexus.bricks.parsers",
    "nexus.bricks.pay",
    "nexus.bricks.portability",
    "nexus.bricks.rebac",
    "nexus.bricks.sandbox",
    "nexus.bricks.search",
    "nexus.bricks.snapshot",
    "nexus.bricks.workflows",
]
# Known violations — ratchet baseline. Remove entries as fixes land.
ignore_imports = [
    # (removed: memory -> search, search -> cache embeddings — now use importlib)
    # (removed: nexus.storage -> nexus.cache.protocols — both are non-brick pillar modules now)
    # cache -> rebac transitive chain (via nexus.server.telemetry, Issue #2179)
    "nexus.server.telemetry -> nexus.bricks.rebac.rebac_tracing",
    # mcp -> rebac: TYPE_CHECKING imports for middleware/profiles (Issue #2429)
    "nexus.bricks.mcp.middleware -> nexus.bricks.rebac.manager",
    "nexus.bricks.mcp.profiles -> nexus.bricks.rebac.manager",
    # search -> rebac: permission enforcement + entity registry in search_service (moved from services/)
    "nexus.bricks.search.search_service -> nexus.bricks.rebac.enforcer",
    "nexus.bricks.search.search_service -> nexus.bricks.rebac.manager",
    # search -> gateway (TYPE_CHECKING): NexusFSGateway type hint — transitive to workflows/parsers
    "nexus.bricks.search.search_service -> nexus.services.gateway",
    # mount -> permission_utils -> gateway: transitive chain to workflows/parsers
    "nexus.lib.permission_utils -> nexus.services.gateway",
    # parsers -> sandbox: TYPE_CHECKING imports for sandbox provider (Issue #2429)
    "nexus.bricks.parsers.validation.runner -> nexus.bricks.sandbox.sandbox_provider",
    "nexus.bricks.parsers.validation.detector -> nexus.bricks.sandbox.sandbox_provider",
    # portability -> * : export_service imports top-level nexus package (transitive hub, Issue #2436)
    "nexus.bricks.portability.export_service -> nexus",
    # mcp -> nexus: server.py imports top-level nexus package — same transitive hub pattern
    "nexus.bricks.mcp.server -> nexus",
]
unmatched_ignore_imports_alerting = "warn"

# Contract 2: Five-tier layered architecture
# contracts (include/linux) < lib+security (lib/) < kernel (core) < services  bricks
# contracts is the type-definition base — everyone can depend on it.
# lib and security provide utilities that may use contract types, like Linux lib/ includes include/linux/.
# security is tier-neutral (TLS, TOFU, prompt sanitizer) — zero kernel/service/brick deps.
[[tool.importlinter.contracts]]
id = "four-tier-layers"
name = "Five-tier architecture: contracts < lib+security < kernel < services  bricks"
type = "layers"
layers = [
    "nexus.bricks",
    "nexus.services",
    "nexus.core",
    "nexus.lib | nexus.security",
    "nexus.contracts",
]
# Ratchet baseline — known violations. Remove entries as fixes land.
# Run: lint-imports --contract four-tier-layers to check.
ignore_imports = [
    # --- tier-neutral (contracts) importing core ---
    "nexus.contracts.metadata -> nexus.core._compact_generated",
    # --- tier-neutral (contracts/protocols) importing bricks ---
    # chunked_upload protocol TYPE_CHECKING import for UploadSession return type
    "nexus.contracts.protocols.chunked_upload -> nexus.bricks.upload.upload_session",
    # --- contracts importing lib (upward — legacy, to be fixed) ---
    "nexus.contracts.agent_utils -> nexus.storage.models",
    "nexus.contracts -> nexus.lib.validators",
    "nexus.contracts.deployment_profile -> nexus.lib.performance_tuning",
    "nexus.contracts.types -> nexus.storage.read_set",
    # WirableFS TYPE_CHECKING imports (cross-tier wiring contract, #2359)
    "nexus.contracts.wirable_fs -> nexus.storage.record_store",
    # --- lib importing services (upward — legacy, to be fixed) ---
    "nexus.lib.permission_utils -> nexus.services.gateway",
    # --- kernel (core) importing bricks ---
    "nexus.core.config -> nexus.bricks.workflows.protocol",
    # --- services importing bricks ---
    "nexus.services.workspace.workspace_rpc_service -> nexus.bricks.workspace.workspace_registry",
    "nexus.services.lifecycle.workflow_dispatch_service -> nexus.bricks.workflows.protocol",
    "nexus.services.namespace.agent_namespace -> nexus.bricks.rebac.namespace_manager",
    "nexus.services.namespace.namespace_fork_service -> nexus.bricks.rebac.namespace_manager",
    # search_semantic → factory._semantic_search → bricks (transitive chain)
    "nexus.factory._semantic_search -> nexus.bricks.search.chunking",
    "nexus.factory._semantic_search -> nexus.bricks.search.indexing",
    "nexus.factory._semantic_search -> nexus.bricks.search.indexing_service",
    "nexus.factory._semantic_search -> nexus.bricks.search.pipeline_indexer",
    # (removed: services.delegation/memory/governance → bricks entries; modules relocated to bricks/)
    # --- bricks importing non-layer modules ---
    # --- non-layer module chain hops ---
    "nexus.factory -> nexus.factory.orchestrator",
    "nexus.factory -> nexus.factory.wallet",
    "nexus.factory.wallet -> nexus.bricks.pay.constants",
    # (removed: nexus.services.sync.sync_service -> glob_fast; now uses importlib)
]
unmatched_ignore_imports_alerting = "warn"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "grpcio-tools>=1.78.0",
    "maturin-import-hook>=0.2.0",
    "mypy>=1.18.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.23.1",
    "types-aiofiles>=25.1.0.20251011",
    "types-protobuf>=6.32.1.20251210",
    "types-redis>=4.6.0.20241004",
]
